some cleanup, removed unused 5 vertex polygon