@@ -10,14 +10,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class Meshes
+public class MeshRegistry
 {
     private static final AtomicInteger next_mesh_index = new AtomicInteger(0);
 
     public static final int CIRCLE_MESH = next_mesh_index.getAndIncrement();
     public static final int TRIANGLE_MESH = next_mesh_index.getAndIncrement();
     public static final int BOX_MESH = next_mesh_index.getAndIncrement();
-    public static final int POLYGON1_MESH = next_mesh_index.getAndIncrement();
 
     private static final Map<Integer, Mesh> loaded_meshes = new HashMap<>();
     private static final Map<String, Integer> mesh_index_map = new HashMap<>();
@@ -33,7 +32,7 @@ public class Meshes
         var vertices = new Vertex[]{ new Vertex(vert_ref_id, 0,0, Collections.emptyList(), new String[0], new float[0]) };
         var faces = new Face[]{ new Face(-1,0, 0, 0) };
         var hull = new int[]{ 0 };
-        return new Mesh("int_particle",-1, vertices, faces, List.of(BoneOffset.identity()), Models.SceneNode.empty(), hull);
+        return new Mesh("int_circle",-1, vertices, faces, List.of(BoneOffset.IDENTITY), SceneNode.empty(), hull);
     }
 
     /**
@@ -64,13 +63,13 @@ public class Meshes
 
         var hull = new int[]{ 0, 1, 2 };
 
-        return new Mesh("int_triangle",-1, vertices, faces, List.of(BoneOffset.identity()), Models.SceneNode.empty(), hull);
+        return new Mesh("int_triangle",-1, vertices, faces, List.of(BoneOffset.IDENTITY), SceneNode.empty(), hull);
     }
 
     /**
      * A simple unit square; 4 vertices defining a square of size 1.
      */
-    private static Mesh generate_box_mesh()
+    private static Mesh generate_square_mesh()
     {
         Vertex[] vertices = new Vertex[4];
         Face[] faces = new Face[2];
@@ -104,49 +103,7 @@ public class Meshes
 
         var hull = new int[]{ 0, 1, 2, 3 };
 
-        return new Mesh("int_square",-1, vertices, faces, List.of(BoneOffset.identity()), Models.SceneNode.empty(), hull);
-    }
-
-    /**
-     * A simple polygon with 5 vertices
-     */
-    private static Mesh generate_poly1_mesh()
-    {
-        Vertex[] vertices = new Vertex[5];
-        Face[] faces = new Face[3];
-
-        float halfSize = 1f / 2f;
-
-        float x1 = -halfSize;
-        float y1 = -halfSize;
-        int v1 = GPGPU.core_memory.new_vertex_reference(x1, y1, new float[4], new int[2]);
-        float x2 = halfSize;
-        float y2 = -halfSize;
-        int v2 = GPGPU.core_memory.new_vertex_reference(x1, y1, new float[4], new int[2]);
-        float x3 = halfSize;
-        float y3 = halfSize;
-        int v3 = GPGPU.core_memory.new_vertex_reference(x1, y1, new float[4], new int[2]);
-        float x4 = 0;
-        float y4 = halfSize * 2;
-        int v4 = GPGPU.core_memory.new_vertex_reference(x1, y1, new float[4], new int[2]);
-        float x5 = -halfSize;
-        float y5 = halfSize;
-        int v5 = GPGPU.core_memory.new_vertex_reference(x1, y1, new float[4], new int[2]);
-
-        vertices[0] = new Vertex(v1, x1, y1, Collections.emptyList(), new String[0], new float[0]);
-        vertices[1] = new Vertex(v2, x2, y2, Collections.emptyList(), new String[0], new float[0]);
-        vertices[2] = new Vertex(v3, x3, y3, Collections.emptyList(), new String[0], new float[0]);
-        vertices[3] = new Vertex(v4, x4, y4, Collections.emptyList(), new String[0], new float[0]);
-        vertices[4] = new Vertex(v5, x5, y5, Collections.emptyList(), new String[0], new float[0]);
-
-        faces[0] = new Face(-1,0, 1, 2);
-        faces[1] = new Face(-1,0, 2, 4);
-        faces[2] = new Face(-1,4, 2, 3);
-
-        var hull = new int[]{ 0, 1, 2, 3, 4 };
-
-        return new Mesh("int_polygon",-1, vertices, faces, List.of(BoneOffset.identity()), Models.SceneNode.empty(), hull);
-
+        return new Mesh("int_square",-1, vertices, faces, List.of(BoneOffset.IDENTITY), SceneNode.empty(), hull);
     }
 
     public static int register_mesh(String model_name, String mesh_name, Mesh mesh)
@@ -160,7 +117,6 @@ public class Meshes
         var mesh_id = next_mesh_index.getAndIncrement();
         mesh_index_map.put(mesh_key, mesh_id);
         register_mesh(mesh_id, mesh);
-        //System.out.printf("registered mesh [%s] with id [%d]\n", mesh_key, mesh_id);
         return mesh_id;
     }
 
@@ -173,7 +129,6 @@ public class Meshes
     {
         register_mesh(CIRCLE_MESH, generate_circle_mesh());
         register_mesh(TRIANGLE_MESH, generate_tri_mesh());
-        register_mesh(BOX_MESH, generate_box_mesh());
-        register_mesh(POLYGON1_MESH, generate_poly1_mesh());
+        register_mesh(BOX_MESH, generate_square_mesh());
     }
 }
